lazy loading the images on the website to speed up loading time, plus fixing small layout issue

--- a/app/stylesheets/partials/_mobile_app_upsell_banner.sass
+++ b/app/stylesheets/partials/_mobile_app_upsell_banner.sass
@@ -1,5 +1,5 @@
 #site-container
-  top: 92px
+  margin-top: 92px
 
 #mobile-app-upsell-banner
   background-color: #006FAD
